[gd_scene load_steps=12 format=3 uid="uid://dc0qf1nda2l4x"]

[ext_resource type="PackedScene" uid="uid://bme8v4sro26wh" path="res://Scenes/Settings/SettingsCategory.tscn" id="1_fkch7"]
[ext_resource type="Script" path="res://Scenes/Settings/DefaultSettings.gd" id="2_0wns0"]
[ext_resource type="SystemFont" uid="uid://bba66hc4ekaai" path="res://Fonts/ARIAL.tres" id="3_v2nu5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gui84"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.427451, 0.427451, 0.427451, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.470588, 0.470588, 0.470588, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gj3s1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvd1e"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.32549, 0.32549, 0.32549, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.478431, 0.478431, 0.478431, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bif1p"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.247059, 0.247059, 0.247059, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.509804, 0.509804, 0.509804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxjp5"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ieobx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3p7x"]

[sub_resource type="Theme" id="Theme_1iksg"]
default_font = ExtResource("3_v2nu5")
default_font_size = 32
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("3_v2nu5")
Button/styles/disabled = SubResource("StyleBoxFlat_gui84")
Button/styles/focus = SubResource("StyleBoxFlat_gj3s1")
Button/styles/hover = SubResource("StyleBoxFlat_uvd1e")
Button/styles/normal = SubResource("StyleBoxFlat_bif1p")
Button/styles/pressed = SubResource("StyleBoxFlat_nxjp5")
CheckBox/styles/disabled = SubResource("StyleBoxEmpty_ieobx")
CheckBox/styles/hover = SubResource("StyleBoxEmpty_ieobx")
CheckBox/styles/hover_pressed = SubResource("StyleBoxEmpty_ieobx")
CheckBox/styles/normal = SubResource("StyleBoxEmpty_ieobx")
CheckBox/styles/pressed = SubResource("StyleBoxEmpty_ieobx")
CheckButton/styles/disabled = SubResource("StyleBoxEmpty_g3p7x")
CheckButton/styles/hover = SubResource("StyleBoxEmpty_g3p7x")
CheckButton/styles/hover_pressed = SubResource("StyleBoxEmpty_g3p7x")
CheckButton/styles/normal = SubResource("StyleBoxEmpty_g3p7x")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_g3p7x")

[node name="DefaultSettings" instance=ExtResource("1_fkch7")]
script = ExtResource("2_0wns0")

[node name="CategoryLabel" parent="." index="0"]
text = "Defaults"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer" index="0"]
layout_mode = 2

[node name="ResetLabel" type="Label" parent="SettingsContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Reset Defaults:"

[node name="ResetButton" type="Button" parent="SettingsContainer/HBoxContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_v2nu5")
theme_override_font_sizes/font_size = 38
text = "Reset"

[node name="WarningDialog" type="ConfirmationDialog" parent="." index="2"]
disable_3d = true
title = "Warning!"
initial_position = 1
size = Vector2i(825, 250)
exclusive = false
borderless = true
always_on_top = true
popup_window = true
mouse_passthrough = true
theme = SubResource("Theme_1iksg")
ok_button_text = "Yes, reset."
dialog_text = "Are you sure?
These changes cannot be undone."

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="canceled" from="WarningDialog" to="." method="_on_warning_dialog_canceled"]
[connection signal="confirmed" from="WarningDialog" to="." method="_on_warning_dialog_confirmed"]
